--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,12 +1,11 @@
-#
-#        _                 _ _   _
-#   __ _| | __ _  ___ _ __(_) |_| |_ _   _
+# $HOME/.config/alacritty/alacritty.yml
+#        _                 _ _   _         
+#   __ _| | __ _  ___ _ __(_) |_| |_ _   _ 
 #  / _` | |/ _` |/ __| '__| | __| __| | | |
 # | (_| | | (_| | (__| |  | | |_| |_| |_| |
 #  \__,_|_|\__,_|\___|_|  |_|\__|\__|\__, |
 #                                    |___/
 #
-# Filename:     alacritty.yml
 # GitHub:       https://github.com/xcession/dotfiles
 # Maintainer:   Пэйнт (Tharawut Paripaiboon)
 
