--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -90,18 +90,18 @@ scrolling:
 # Font configuration
 font:
   normal:
-    family: JetBrains Mono
+    family: Iosevka
     style: Regular
   bold:
-    family: JetBrains Mono
+    family: Iosevka
     style: Bold
   italic:
-    family: JetBrains Mono
+    family: Iosevka
     style: Italic
   bold_italic:
-    family: JetBrains Mono
+    family: Iosevka
     style: Bold Italic
-  size: 14.0
+  size: 16.0
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
