--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -83,16 +83,16 @@ scrolling:
 # Font configuration
 font:
   normal:
-    family: JetBrains Mono
+    family: Iosevka
     style: Regular
   bold:
-    family: JetBrains Mono
+    family: Iosevka
     style: Bold
   italic:
-    family: JetBrains Mono
+    family: Iosevka
     style: Italic
   bold_italic:
-    family: JetBrains Mono
+    family: Iosevka
     style: Bold Italic
   size: 8.5
 
