--- a/.config/i3/config
+++ b/.config/i3/config
@@ -348,6 +348,8 @@ for_window [class="(?i)(?:qt5ct|pinentry)"]             floating enable, focus
 for_window [title="(?i)(?:copying|deleting|moving)"]    floating enable
 for_window [window_role="(?i)(?:pop-up|setup)"]         floating enable
 
+for_window [title="Android Emulator"]                   floating enable
+
 popup_during_fullscreen smart
 
 #: }}}
