--- a/.config/i3/config
+++ b/.config/i3/config
@@ -34,7 +34,7 @@ set $left h
 set $right l
 
 # prefered terminal
-set $term alacritty
+set $term kitty
 
 # bar and window color
 set $bg-color               #000000
