--- a/.config/i3/config
+++ b/.config/i3/config
@@ -35,6 +35,18 @@ set $right l
 # prefered terminal
 set $term kitty
 
+# define workspace
+set $ws1 1
+set $ws2 2
+set $ws3 3
+set $ws4 4
+set $ws5 5
+set $ws6 6
+set $ws7 7
+set $ws8 8
+set $ws9 9
+set $ws10 0:<span foreground="#1ED760">Spotify</span>
+
 # bar and window color
 set $bg-color               #000000
 set $active-bg-color        #cdfd00
@@ -172,40 +184,42 @@ bindsym $Mod+Shift+Right    move right  10px
 #: Workspaces {{{
 
 # switch to workspace
-bindsym $Mod+1 workspace 1
-bindsym $Mod+2 workspace 2
-bindsym $Mod+3 workspace 3
-bindsym $Mod+4 workspace 4
-bindsym $Mod+5 workspace 5
-bindsym $Mod+6 workspace j
-bindsym $Mod+7 workspace 7
-bindsym $Mod+8 workspace 8
+bindsym $Mod+1 workspace $ws1
+bindsym $Mod+2 workspace $ws2
+bindsym $Mod+3 workspace $ws3
+bindsym $Mod+4 workspace $ws4
+bindsym $Mod+5 workspace $ws5
+bindsym $Mod+6 workspace $wsj
+bindsym $Mod+7 workspace $ws7
+bindsym $Mod+8 workspace $ws8
+bindsym $Mod+9 workspace $ws9
+bindsym $Mod+0 workspace $ws10
 # switch to workspace - numpad alternatives
-bindsym $Mod+Mod2+KP_1 workspace 1
-bindsym $Mod+Mod2+KP_2 workspace 2
-bindsym $Mod+Mod2+KP_3 workspace 3
-bindsym $Mod+Mod2+KP_4 workspace 4
-bindsym $Mod+Mod2+KP_5 workspace 5
-bindsym $Mod+Mod2+KP_6 workspace 6
-bindsym $Mod+Mod2+KP_7 workspace 7
-bindsym $Mod+Mod2+KP_8 workspace 8
+bindsym $Mod+Mod2+KP_1 workspace $ws1
+bindsym $Mod+Mod2+KP_2 workspace $ws2
+bindsym $Mod+Mod2+KP_3 workspace $ws3
+bindsym $Mod+Mod2+KP_4 workspace $ws4
+bindsym $Mod+Mod2+KP_5 workspace $ws5
+bindsym $Mod+Mod2+KP_6 workspace $ws6
+bindsym $Mod+Mod2+KP_7 workspace $ws7
+bindsym $Mod+Mod2+KP_8 workspace $ws8
+bindsym $Mod+Mod2+KP_9 workspace $ws9
+bindsym $Mod+Mod2+KP_0 workspace $ws10
 
 # switch to next or previous workspace
 bindsym $Mod+Mod1+Left workspace prev
 bindsym $Mod+Mod1+Right workspace next
 
 # move focused container to workspace
-bindsym $Mod+Shift+1 move container to workspace 1; workspace 1
-bindsym $Mod+Shift+2 move container to workspace 2; workspace 2
-bindsym $Mod+Shift+3 move container to workspace 3; workspace 3
-bindsym $Mod+Shift+4 move container to workspace 4; workspace 4
-bindsym $Mod+Shift+5 move container to workspace 5; workspace 5
-bindsym $Mod+Shift+6 move container to workspace 6; workspace 6
-bindsym $Mod+Shift+7 move container to workspace 7; workspace 7
-bindsym $Mod+Shift+8 move container to workspace 8; workspace 8
-
-# Note: workspaces can have any name you want, not just numbers.
-# We just use 1-8 as the default.
+bindsym $Mod+Shift+1 move container to workspace $ws1; workspace $ws1
+bindsym $Mod+Shift+2 move container to workspace $ws2; workspace $ws2
+bindsym $Mod+Shift+3 move container to workspace $ws3; workspace $ws3
+bindsym $Mod+Shift+4 move container to workspace $ws4; workspace $ws4
+bindsym $Mod+Shift+5 move container to workspace $ws5; workspace $ws5
+bindsym $Mod+Shift+6 move container to workspace $ws6; workspace $ws6
+bindsym $Mod+Shift+7 move container to workspace $ws7; workspace $ws7
+bindsym $Mod+Shift+8 move container to workspace $ws8; workspace $ws8
+bindsym $Mod+Shift+9 move container to workspace $ws9; workspace $ws9
 
 #: }}}
 
@@ -302,8 +316,8 @@ bindsym XF86AudioNext exec dbus-send --print-reply --dest=org.mpris.MediaPlayer2
 bindsym XF86AudioPrev exec dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Previous
 
 # backlight
-bindsym XF86MonBrightnessUp     exec --no-startup-id xbacklight -inc 10 ; exec --no-startup-id "current_brightness=$(xbacklight -get) && notify-send \\"Screen Brightness\\", $current_brightness -u low -t 1000"
-bindsym XF86MonBrightnessDown   exec --no-startup-id xbacklight -dec 10 ; exec --no-startup-id "current_brightness=$(xbacklight -get) && notify-send \\"Screen Brightness\\", $current_brightness -u low -t 1000"
+bindsym XF86MonBrightnessUp     exec --no-startup-id xbacklight -inc 10 ;
+bindsym XF86MonBrightnessDown   exec --no-startup-id xbacklight -dec 10 ;
 
 #: }}}
 
@@ -346,6 +360,8 @@ bar {
 for_window [class="(?i)(?:qt5ct|pinentry)"]             floating enable, focus
 for_window [title="(?i)(?:copying|deleting|moving)"]    floating enable
 for_window [window_role="(?i)(?:pop-up|setup)"]         floating enable
+
+for_window [class="Spotify"]                            move to workspace $ws10
 
 for_window [title="Android Emulator"]                   floating enable
 
