--- a/.config/i3/config
+++ b/.config/i3/config
@@ -359,9 +359,9 @@ bar {
 # focus, floating, & sticky
 for_window [class="(?i)(?:qt5ct|pinentry)"]             floating enable, focus
 for_window [title="(?i)(?:copying|deleting|moving)"]    floating enable
-for_window [window_role="(?i)(?:pop-up|setup)"]         floating enable
+for_window [window_role="(?i)(?:about|pop-up|setup)"]   floating enable
 
-for_window [class="Spotify"]                            move to workspace $ws10
+for_window [class="Spotify"]                            move --no-auto-back-and-forth to workspace $ws10
 
 for_window [title="Android Emulator"]                   floating enable
 
