--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -87,16 +87,16 @@ scrolling:
 # Font configuration
 font:
   normal:
-    family: Iosevka
+    family: JetBrains Mono
     style: Regular
   bold:
-    family: Iosevka
+    family: JetBrains Mono
     style: Bold
   italic:
-    family: Iosevka
+    family: JetBrains Mono
     style: Italic
   bold_italic:
-    family: Iosevka
+    family: JetBrains Mono
     style: Bold Italic
   size: 16.0
 
