--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -83,18 +83,18 @@ scrolling:
 # Font configuration
 font:
   normal:
-    family: Iosevka
+    family: JetBrains Mono
     style: Regular
   bold:
-    family: Iosevka
+    family: JetBrains Mono
     style: Bold
   italic:
-    family: Iosevka
+    family: JetBrains Mono
     style: Regular
   bold_italic:
-    family: Iosevka
+    family: JetBrains Mono
     style: Bold Italic
-  size: 10.5
+  size: 9
 
   # Offset is the extra space around each character. `offset.y` can be thought of
   # as modifying the line spacing, and `offset.x` as modifying the letter spacing.
