--- a/.config/i3/config
+++ b/.config/i3/config
@@ -328,7 +328,8 @@ bindsym XF86MonBrightnessDown   exec --no-startup-id xbacklight -dec 10 ;
 #: Misc {{{
 
 # screenshot
-bindsym Print exec --no-startup-id "scrot '%s.png' -e 'mv $f $$(xdg-user-dir PICTURES)/screenshot-%s-$wx$h.png ; feh $$(xdg-user-dir PICTURES)/screenshot-%s-$wx$h.png'"
+
+bindsym Print exec --no-startup-id "flameshot gui -p $HOME/Pictures"
 
 #: }}}
 
