--- a/.config/i3/config
+++ b/.config/i3/config
@@ -367,6 +367,7 @@ for_window [title="(?i)(?:copying|deleting|moving)"]    floating enable
 for_window [window_role="(?i)(?:about|pop-up|setup)"]   floating enable
 
 for_window [title="Android Emulator"]                   floating enable
+for_window [class="(?i)(?:mojosetup)"]                  floating enable
 
 popup_during_fullscreen smart
 
