--- a/.config/i3/config
+++ b/.config/i3/config
@@ -320,8 +320,8 @@ bindsym XF86AudioNext exec dbus-send --print-reply --dest=org.mpris.MediaPlayer2
 bindsym XF86AudioPrev exec dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Previous
 
 # backlight
-bindsym XF86MonBrightnessUp     exec --no-startup-id xbacklight -inc 10 ;
-bindsym XF86MonBrightnessDown   exec --no-startup-id xbacklight -dec 10 ;
+bindsym XF86MonBrightnessUp     exec --no-startup-id "xbacklight -inc 10; notify-send 'brightness up'"
+bindsym XF86MonBrightnessDown   exec --no-startup-id "xbacklight -dec 10; notify-send 'brightness down'"
 
 #: }}}
 
