--- a/.config/i3/config
+++ b/.config/i3/config
@@ -103,7 +103,8 @@ exec --no-startup-id "setxkbmap -layout gb,th -option grp:win_space_toggle"
 #: Container / Windows control {{{
 
 # border & title
-for_window [class="^.*"] border pixel $border_size, title_format "<b> %class >> %title </b>"
+for_window [class="^.*"] border pixel $border_size, \
+  title_format "<b> %class >> %title </b>"
 
 new_window  normal
 new_float   normal
@@ -111,11 +112,16 @@ new_float   normal
 hide_edge_borders both
 
 # window colors
-#                           border              background          text                    indicator
-client.focused              $active-bg-color    $active-bg-color    $inactive-text-color    #00ff00
-client.unfocused            $bg-color           $bg-color           $inactive-text-color    #00ff00
-client.focused_inactive     $inactive-bg-color	$inactive-bg-color	$bg-color               #00ff00
-client.urgent               $urgent-bg-color    $urgent-bg-color    $text-color             #00ff00
+# client    border    background \
+#   text    indicator
+client.focused            $active-bg-color    $active-bg-color \
+  $inactive-text-color    #00ff00
+client.unfocused          $bg-color           $bg-color \
+  $inactive-text-color    #00ff00
+client.focused_inactive   $inactive-bg-color	$inactive-bg-color \
+  $bg-color               #00ff00
+client.urgent             $urgent-bg-color    $urgent-bg-color \
+  $text-color             #00ff00
 
 # switch to workspace with urgent window
 for_window [urgent="latest"]    focus
@@ -361,20 +367,28 @@ exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 #: Application Settings {{{
 
 # assign applications to specific workspace
-assign [class="(?i)(?:firefox)"]  $ws1
+assign [class="(?i)(?:firefox)"] \
+  $ws1
 
-for_window [class="Spotify"]      move --no-auto-back-and-forth to workspace $ws10
+for_window [class="Spotify"] \
+  move --no-auto-back-and-forth to workspace $ws10
 
 # focus, floating, & sticky
-for_window [class="(?i)(?:qt5ct|pinentry)"]             floating enable, focus
-for_window [title="(?i)(?:copying|deleting|moving)"]    floating enable
-for_window [window_role="(?i)(?:about|pop-up|setup)"]   floating enable
+for_window [class="(?i)(?:qt5ct|pinentry)"] \
+  floating enable, focus
+for_window [title="(?i)(?:copying|deleting|moving)"] \
+  floating enable
+for_window [window_role="(?i)(?:about|pop-up|setup)"] \
+  floating enable
 
-for_window [title="Android Emulator"]                   floating enable
+for_window [title="Android Emulator"] \
+  floating enable
 # GOG Games installer
-for_window [class="(?i)(?:mojosetup)"]                  floating enable
+for_window [class="(?i)(?:mojosetup)"] \
+  floating enable
 # Flameshot
-for_window [class="(?i)(?:flameshot)"]                  floating enable
+for_window [class="(?i)(?:flameshot)"] \
+  floating enable
 
 popup_during_fullscreen smart
 
