--- a/.config/i3/config
+++ b/.config/i3/config
@@ -192,6 +192,8 @@ bindsym $Mod+Shift+Right    move right  10px
 
 #: Workspaces {{{
 
+workspace_auto_back_and_forth yes
+
 # switch to workspace
 bindsym $Mod+1 workspace $ws1
 bindsym $Mod+2 workspace $ws2
