--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -43,7 +43,7 @@ compositing-border = over
 background = #000000
 background-alt = #1c1b19
 foreground = #f7f8f7
-foreground-alt = #fce8c3
+foreground-alt = #918175
 primary = #cdfd00
 secondary = #2c78bf
 alert = #ff5300
@@ -267,7 +267,6 @@ format = <label>
 
 format-prefix = " "
 format-prefix-font = 2
-format-prefix-foreground = ${colors.foreground-alt}
 
 label = %date% %time%
 
@@ -293,19 +292,19 @@ label-disconnected-foreground = ${colors.foreground-alt}
 type = internal/fs
 interval = 30
 
-mount-0 = /
-mount-1 = /home
+mount-0 = /home
 
 format-mounted = <label-mounted>
-format-mounted-foreground = ${colors.foreground-alt}
 format-mounted-underline = ${colors.secondary}
 
 format-unmounted = <label-unmounted>
-format-unmounted-underline = ${colors.background-alt}
+format-unmounted-underline = ${colors.foreground-alt}
 
-label-mounted = %{F#2c78bf}%mountpoint%%{F-}: %free%
-; label-mounted = %free% free
-label-unmounted = %mountpoint% not mounted
+; label-mounted = %{F#2c78bf}%mountpoint%%{F-}: %free%
+label-mounted = %mountpoint% %free%
+
+label-unmounted = %mountpoint%
+label-unmounted-foreground = ${colors.foreground-alt}
 
 [module/i3]
 ;https://github.com/jaagr/polybar/wiki/Module:-i3
@@ -458,7 +457,6 @@ ramp-1 = 
 ramp-2 = 
 ramp-3 = 
 ramp-4 = 
-ramp-foreground = ${colors.foreground-alt}
 
 [module/wlan]
 type = internal/network
