--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -13,14 +13,14 @@
 
 #: To get a full list of supported fonts use `kitty list-fonts`
 
-font_family         Iosevka Term
+font_family         JetBrains Mono
 bold_font           auto
 italic_font         auto
 bold_italic_font    auto
 
 #: Font size (in pts)
 
-font_size   14.0
+font_size   11.5
 
 force_ltr yes
 
